# TextMorph

./: .gitignore  README.md  SetUp.md  app.py  config.yaml  pyproject.toml  requirements.txt  ui_app.py
config/: config.yml  config_loader.py  test_config.py
mvp/: logger.py  paraphraser.py  test_logger.py
